- Change case bump size from fixed value (1.0) to std of each area., which is more realistic. Too small bump seems to create erraneous result. - Cosmetic change of Rt result

--- a/index.css
+++ b/index.css
@@ -78,6 +78,9 @@
   float: left;
 }
 
+#referenceRt {
+  float: left;
+}
 #bystate-dynamics div svg g g g g path { 
 	stroke-width:4px; 
 }
